# wg-bc-app

./: .gitignore  CMakeLists.txt  buck_boost.plecs  plecs_compile.bat
code/keil/Template/: gd32f30x_it.c  main.c  systick.c  systick.h
code/plecs/: plecs.c  plecs.h
code/section/: my_math.h  no_double.h  platform.h  section.c  section.h
code/user/L1/: bat_charge_pattern.c  bat_charge_pattern.h  can_test.c  charge_control.c  charge_control.h  ctrl_app.c  ctrl_app.h  data_com.c  data_com.h  eeprom_cfg.c  eeprom_cfg.h  flash_cfg.c  flash_cfg.h  fsm.c  fsm.h  fwdgt.c  fwdgt.h  led.c  led.h  protect.c  protect.h  stop_dormant.c  stop_dormant.h
code/user/L2/: adc_check.c  adc_check.h  buck_boost.c  buck_boost.h  buck_boost_mode.c  buck_boost_mode.h  can_comm.c  can_comm.h  can_rmp.c  can_rmp.h  can_wg.c  can_wg.h  curr_lmt.c  curr_lmt.h  fault.c  fault.h  l_loop.c  l_loop.h  l_loop_open.c  l_loop_open.h  led_ctrl.c  open_loop.c  open_loop.h  power_sw.c  power_sw.h  temp_derate.c  temp_derate.h  volt_loop.c  volt_loop.h
code/user/L3/: adc.c  adc.h  app_features.h  auto_mode.c  auto_mode.h  basic_mode.c  basic_mode.h  bat_mode.c  bat_mode.h  bsp_timer.c  bsp_timer.h  can.c  can.h  can_packet.c  can_packet.h  client_can.c  client_can.h  comm.c  comm.h  comm_addr.h  comm_link.c  comm_link.h  custom_mode.c  custom_mode.h  eeprom.c  eeprom.h  fan_drive.c  fan_drive.h  flash.c  flash.h  get_com_data.c  get_com_data.h  gpio.c  gpio.h  mppt.c  mppt.h  ntc_table.h  perf.c  perf.h  pid.c  (+21 more)
code/xh_keil/: JLinkLog.txt  JLinkSettings.ini  Project.sct  Project_IAP.sct  build_app_autosys_recover_power_20260603_144945.htm  hc32f3xx_conf.h  main.c  system_hc32f334.c  template.uvguix.Deng20250325  template.uvguix.郑传辉  template.uvoptx  template.uvprojx
code/xh_keil/bsp/: bsp_adc.c  bsp_adc.h  bsp_can.c  bsp_can.h  bsp_dma.c  bsp_dma.h  bsp_fwdgt.c  bsp_fwdgt.h  bsp_gpio.c  bsp_gpio.h  bsp_iic.c  bsp_iic.h  bsp_init.c  bsp_pwc.c  (+11 more)
(+26 files in other folders)
